force-app/main/default/objects/Portfolio_Account_Assign__c/Portfolio_Account_Assign__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a portfolio to an account</description>
    <label>Portfolio-Account Assign</label>
    <nameField>
        <displayFormat>PAA-{000000}</displayFormat>
        <label>Portfolio-Account Assign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Account Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>