force-app/main/default/objects/Portfolio_Account_Assign__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account linked from this join record</description>
    <inlineHelpText>The account linked from this join record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Account Assigns</relationshipLabel>
    <relationshipName>Portfolio_Account_Assigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>