force-app/main/default/objects/Portfolio_Account_Assign__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>The portfolio linked from this join record</description>
    <inlineHelpText>The portfolio linked from this join record</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Portfolio Account Assigns</relationshipLabel>
    <relationshipName>Portfolio_Account_Assigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>